mi primer commit de la rama developer

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hyperblog Curso-Git-Hub edicion desde la web</title>
+        <title>Bienvenido a Hyperblog Curso-Git-Hub esta es la rama Developer</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
