este es mi primer commit como anitamaster

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
-<html>
+<html lang="es">
     <head>
+        <meta charset="UTF-8">
         <title>Bienvenido a Hyperblog Curso-Git-Hub edicion desde la web</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
@@ -8,7 +9,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera Curso-Git-Hub esta es la rama Header</span>
+                <span id="tagline">Tu blog de cabecera Curso-Git-Hub esta es la rama Footer</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
@@ -19,3 +20,4 @@
         </div>
     </body>
 </html>
+
