ya esta el footer finalizado

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
                 <p>Suscribete y dale like</p>
 
 <div id="footer">
-Hecho con amor en Platzi <3
+Hecho con amor en Platzi este footer de anitamaster <3
 </div>
 
             </div>
