--- a/blogpost.html
+++ b/blogpost.html
@@ -1,21 +1,32 @@
-<html>
-    <head>
-        <title>Bienvenido a Hyperblog Curso-Git-Hub edicion desde la web</title>
-        <link rel="stylesheet" href="css/estilos.css" />
-    </head>
-    <body>
-        <div id="container">
-            <div id="cabecera">
-                <img id="logo" src="imagenes/dragon.png" />
-                Hyperblog
-                <span id="tagline">Tu blog de cabecera Curso-Git-Hub esta es la rama Header</span>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Bienvenido a Hyperblog Curso-Git-Hub edicion desde la web</title>
+    <link rel="stylesheet" href="css/estilos.css" />
+</head>
+
+<body>
+    <div id="container">
+        <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png" />
+            Hyperblog
+            <span id="tagline">Tu blog de cabecera Curso-Git-Hub esta es la rama Footer</span>
+        </div>
+        <div id="post">            
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas
+            </p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o
+                salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+            <p>Suscribete y dale like</p>
+
+            <div id="footer">
+                Hecho con amor en Platzi <3 
             </div>
-            <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-                <p>Suscribete y dale like</p>
+
             </div>
         </div>
-    </body>
+</body>
+
 </html>
