--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Bienvenido a Hyperblog Curso-Git-Hub edicion desde la web</title>
+        <title>Hyperblog 2.0 es un blog del futuro - Curso-Git-Hub edicion desde la web</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
